<resources>
    <string name="app_name">Alimentame</string>
    <!-- Buttons strings -->
    <string name="add_geofences">Activar geofense</string>
    <string name="remove_geofences">Desactivar geofence</string>

    <string name="geofences_added">Geofence activado</string>
    <string name="geofences_removed">Geofence desactivado</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no conectada. Intente nuevamente.</string>
    <string name="geofence_not_available">Geofence no disponible</string>
    <string name="geofence_too_many_geofences">Su app a registrado demasiados geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Error desconocido: El servicio geofense no esta disponible
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">A ingresado a</string>
    <string name="geofence_transition_exited">A salido de</string>
    <string name="unknown_geofence_transition">Desconocida transcion</string>

    <string name="geofence_transition_notification_text">Para retornar a la App haga click</string>
    <string name="vendedor">Vendedor</string>
    <string name="producto">Producto</string>
    <string name="insertar">Publicar</string>
    <string name="title_activity_user">Map</string>
    <string name="Name_prod">Nombre Producto</string>
    <string name="Precio">Precio</string>
    <string name="Descripcion">Descipcion</string>
    <string name="interfaz_vendedor">Interfaz Vendedor</string>
    <string name="button">Publicar producto</string>
    <string name="button1">Ver productos publicados</string>
    <string name="desc">botonGalleria</string>
    <string name="desc2">boton Camara</string>
    <string name="desc3">Mostrar foto</string>
    <string name="precio">Precio</string>
    <string name="tienda">Publicacion de Tienda</string>
    <string name="nombre">Nombre de la tienda</string>
    <string name="descricion">Descripcion</string>
    <string name="publicar">Publicar</string>
    <string name="titulolistar">Tus tiendas</string>
    <string name="eliminar">Eliminar</string>
    <string name="modificar">Modificar</string>
    <string name="modifica">Modificar Tienda</string>
    <string name="Disponible">Disponible</string>
    <string name="noDisponible">No disponible</string>

</resources>
