<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/blackground1" >

    <TextView
        android:text="@string/modifica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Titulo"
        android:textSize="30sp"
        android:textColor="@color/wallet_bright_foreground_holo_light"
        android:textStyle="normal|bold|italic"
        android:textAlignment="center"
        tools:ignore="RtlCompat"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/Titulo"
        android:layout_toLeftOf="@+id/foto_seleccion"
        android:layout_toStartOf="@+id/foto_seleccion" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/Nombre"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />

    <TextView
        android:text="@string/Descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_below="@+id/Nombre"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:textColor="@color/colorAccent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/Descripcion"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />

    <TextView
        android:text="@string/Precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_below="@+id/Descripcion"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:textColor="@color/colorAccent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/Precio"
        android:layout_below="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:id="@+id/imageView"
        android:contentDescription="@string/desc2"
        android:onClick="cameraMod"
        android:background="@android:color/background_light"
        android:layout_centerVertical="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        android:id="@+id/imageView2"
        android:contentDescription="@string/desc"
        android:onClick="galleryMod"
        android:background="@android:color/background_light"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:id="@+id/Opciones">
        <RadioButton
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:id="@+id/Disponible"
            android:text="@string/Disponible"
            android:background="@android:color/background_light">
        </RadioButton>
        <RadioButton
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:id="@+id/Nodisponible"
            android:text="@string/noDisponible"
            android:background="@android:color/background_light">
        </RadioButton>
    </RadioGroup>

    <Button
        android:text="@string/publicar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Boton"
        android:onClick="publicarMod"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/btn_star_big_on"
        android:id="@+id/foto_seleccion"
        android:contentDescription="@string/desc3"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/Boton"
        android:layout_centerHorizontal="true" />
</LinearLayout>