<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/blackground1" >

    <TextView
        android:text="Publicacion de producto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="34sp"
        android:textColor="?android:attr/colorForeground" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name_prod"
        android:textColor="@color/wallet_bright_foreground_holo_light"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/Nombre_prod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Descripcion"
        android:textColor="@color/wallet_bright_foreground_holo_light"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/Descripcion" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Precio"
        android:textColor="@color/wallet_bright_foreground_holo_light"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/Precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:text="Tomar foto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Foto"
        android:onClick="TomarFoto"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/insertar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/insertar"
            android:elevation="0dp"
            android:onClick="publicar"/>
    </LinearLayout>

</LinearLayout>